--- a/demo/index.html
+++ b/demo/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <title>Title</title>
-</head>
-<body>
-  <div id="editor"></div>
-  <script src="../dist/index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../dist/index.css" />
+    <title>CampEditor</title>
+  </head>
+  <body>
+    <div id="editor"></div>
+    <script src="../dist/index.js" type="module"></script>
+    <script src="index.js" type="module"></script>
+  </body>
 </html>
